RESOLVED FIXED163303
color-gamut media query shouldn't ASSERT on invalid values
https://bugs.webkit.org/show_bug.cgi?id=163303
Summary color-gamut media query shouldn't ASSERT on invalid values
Dean Jackson
Reported 2016-10-11 15:53:58 PDT
color-gamut media query shouldn't ASSERT on invalid values
Attachments
Patch (4.32 KB, patch)
2016-10-11 15:59 PDT, Dean Jackson
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2016-10-11 15:56:54 PDT
Dean Jackson
Comment 2 2016-10-11 15:59:48 PDT
Dean Jackson
Comment 3 2016-10-11 16:24:36 PDT
Note You need to log in before you can comment on or make changes to this bug.