color-gamut media query shouldn't ASSERT on invalid values https://bugs.webkit.org/show_bug.cgi?id=163303 <rdar://problem/28724566>

Reviewed by Simon Fraser.

Source/WebCore:

Remove the ASSERT_NOT_REACHED in the evaluation, since it
can be hit when there is a valid CSS keyword that is not
expected in the query.

Updated fast/media/mq-color-gamut.html

* css/MediaQueryEvaluator.cpp:
(WebCore::colorGamutEvaluate):

LayoutTests:

Add a 'none' test.

* fast/media/mq-color-gamut-expected.html:
* fast/media/mq-color-gamut.html:

Canonical link: https://commits.webkit.org/181143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207176 268f45cc-cd09-0410-ab3c-d52691b4dbfc