Source/WebCore/css/MediaQueryEvaluator.cpp
@@ -255,7 +255,6 @@ static bool colorGamutEvaluate(CSSValue* value, const CSSToLengthConversionData&
         // FIXME: At some point we should start detecting displays that support more colors.
         return false;
     default:
-        ASSERT_NOT_REACHED();
         return true;
     }
 }
